--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,25 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"><style>
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
+</style>
 </head>
-<body>
+<body style="background-color: #AFC5E0">
   <app-root></app-root>
 </body>
+<footer class="footer">
+  <div class="container">
+
+    <span>Copyright</span>
+  </div>
+</footer>
 </html>
