--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,14 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html lang="en" style="height: 100%;">
+<head >
   <meta charset="utf-8">
   <title>ACAEFrontEnd</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico"><style>
-  .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
-    color: white;
-    text-align: center;
-  }
-</style>
-</head>
-<body style="background-color: #AFC5E0">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"></head>
+<body style="background-color: #AFC5E0; height: 95%">
   <app-root></app-root>
 </body>
-<footer class="footer">
-  <div class="container">
 
-    <span>Copyright</span>
-  </div>
-</footer>
 </html>
