Mechanics for Utility Pages

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,18 @@
 <!doctype html>
-<html lang="en" style="height: 100%;">
+<style>
+
+  html, body {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  body > * {
+    flex-shrink: 0;
+  }
+</style>
+<html lang="en" >
 <head >
   <meta charset="utf-8">
   <title>ACAEFrontEnd</title>
@@ -9,8 +22,8 @@
 
   <link rel="icon" type="image/x-icon" href="favicon.ico"></head>
 
-<body style="background-color: #AFC5E0; height: 95%">
-  <app-root></app-root>
+<body>
+  <app-root class="flex-grow-1" style="display:flex; position: relative; overflow:hidden"></app-root>
 </body>
 
 </html>
